--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </figure>
     <!--  18 -->
       <figure class="knife-item">
-      <img src="images/Smugastik1.jpg" alt="Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор" class="gallery-image">
+      <img src="images/Smugastik1.JPG" alt="Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор" class="gallery-image">
       <figcaption>Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор</figcaption>
     </figure>
      <!--  19 -->
@@ -127,7 +127,7 @@
     </figure>
      <!--  23 -->
       <figure class="knife-item">
-      <img src="images/U8.JPG" alt="Ніж «-U8-»: сталь У8 , дерево бубинго карельська береза та мельхіор" class="gallery-image">
+      <img src="images/U8.jpg" alt="Ніж «-U8-»: сталь У8 , дерево бубинго карельська береза та мельхіор" class="gallery-image">
       <figcaption>Ніж «-U8-»: сталь У8 , дерево бубинго карельська береза та мельхіор</figcaption>
       
     </figure>
