плавніші збільшення фото

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Галерея ножів ручної роботи</title>
+  
+  <!-- Попереднє завантаження критичних ресурсів -->
+  <link rel="preload" href="images/Fon.jpg" as="image">
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" as="style">
+  
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -15,119 +21,119 @@
   <div class="gallery">
     <!--  1 -->
     <figure class="knife-item">
-      <img src="images/aicuti1.jpg" alt="Ніж по мотивам Айкуті: сталь ДІ37, дуб, нейзильбер" class="gallery-image">
+      <img src="images/aicuti1.jpg" alt="Ніж по мотивам Айкуті: сталь ДІ37, дуб, нейзильбер" class="gallery-image"loading="lazy">
       <figcaption>Ніж «по мотивам Айкуті»: сталь ДІ37, морений дуб, нейзильбер</figcaption>
       <a href="https://youtube.com/shorts/nEc5gzK4ywE?si=hvy43kElnOzXaMBS" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
     </figure>
     <!--  2 -->
     <figure class="knife-item">
-      <img src="images/aicuti2.jpg" alt="Ніж по мотивам Айкуті: сталь ДІ37, дуб, нейзильбер" class="gallery-image">
+      <img src="images/aicuti2.jpg" alt="Ніж по мотивам Айкуті: сталь ДІ37, дуб, нейзильбер" class="gallery-image"loading="lazy">
       <figcaption>Ніж «по мотивам Айкуті»: сталь ДІ37, морений дуб, нейзильбер</figcaption>
       <a href="https://youtube.com/shorts/nEc5gzK4ywE?si=hvy43kElnOzXaMBS" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
     </figure>
     <!--  3 -->
     <figure class="knife-item">
-      <img src="images/aicuti3.jpg" alt="Ніж по мотивам Айкуті: сталь ДІ37, дуб, нейзильбер" class="gallery-image">
+      <img src="images/aicuti3.jpg" alt="Ніж по мотивам Айкуті: сталь ДІ37, дуб, нейзильбер" class="gallery-image"loading="lazy">
       <figcaption>Ніж «по мотивам Айкуті»: сталь ДІ37, морений дуб, нейзильбер</figcaption>
       <a href="https://youtube.com/shorts/nEc5gzK4ywE?si=hvy43kElnOzXaMBS" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
     </figure>
     <!--  4 -->
     <figure class="knife-item">
-      <img src="images/95h18_1.jpg" alt="Ніж «Малюк»: сталь 95х18, кап дуба" class="gallery-image">
+      <img src="images/95h18_1.jpg" alt="Ніж «Малюк»: сталь 95х18, кап дуба" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Малюк»: сталь 95х18, кап дуба</figcaption>
     </figure>
      <!--  5 -->
     <figure class="knife-item">
-      <img src="images/95h18_2.jpg" alt="Ніж «Малюк»: сталь 95х18, кап дуба" class="gallery-image">
+      <img src="images/95h18_2.jpg" alt="Ніж «Малюк»: сталь 95х18, кап дуба" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Малюк»: сталь 95х18, кап дуба</figcaption>
     </figure>
      <!--  6 -->
     <figure class="knife-item">
-      <img src="images/95h18_3.jpg" alt="Ніж «Малюк»: сталь 95х18, кап дуба" class="gallery-image">
+      <img src="images/95h18_3.jpg" alt="Ніж «Малюк»: сталь 95х18, кап дуба" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Малюк»: сталь 95х18, кап дуба</figcaption>
     </figure>
      <!--  7 -->
     <figure class="knife-item">
-      <img src="images/cap_X12mf.jpg" alt="Ніж «Каповий»: сталь х12мф, кап клена з латунними радіусними вставками" class="gallery-image">
+      <img src="images/cap_X12mf.jpg" alt="Ніж «Каповий»: сталь х12мф, кап клена з латунними радіусними вставками" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Каповий»: сталь х12мф, кап клена з латунними радіусними вставками</figcaption>
     </figure>
      <!--  8 -->
     <figure class="knife-item">
-      <img src="images/DI37_1.jpg" alt="Ніж «Класика»: сталь ДІ37, Морений дуб латунь та карельська береза" class="gallery-image">
+      <img src="images/DI37_1.jpg" alt="Ніж «Класика»: сталь ДІ37, Морений дуб латунь та карельська береза" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Класика»: сталь ДІ37, Морений дуб латунь на карельська береза</figcaption>
       <a href="https://youtube.com/shorts/kYskwzN3m-8?si=PiHTn0bSN5YvhQT-" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
     </figure>
      <!--  9 -->
     <figure class="knife-item">
-      <img src="images/DI37_2.jpg" alt="Ніж «Класика»: сталь ДІ37, Морений дуб латунь та карельська береза" class="gallery-image">
+      <img src="images/DI37_2.jpg" alt="Ніж «Класика»: сталь ДІ37, Морений дуб латунь та карельська береза" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Класика»: сталь ДІ37, Морений дуб латунь на карельська береза</figcaption>
       <a href="https://youtube.com/shorts/kYskwzN3m-8?si=PiHTn0bSN5YvhQT-" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
     </figure>
     <!--  10 -->
     <figure class="knife-item">
-      <img src="images/DI37_3.jpg" alt="Ніж «Класика»: сталь ДІ37, Морений дуб латунь та карельська береза" class="gallery-image">
+      <img src="images/DI37_3.jpg" alt="Ніж «Класика»: сталь ДІ37, Морений дуб латунь та карельська береза" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Класика»: сталь ДІ37, Морений дуб латунь на карельська береза</figcaption>
       <a href="https://youtube.com/shorts/kYskwzN3m-8?si=PiHTn0bSN5YvhQT-" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
     </figure>
     <!--  11 -->
     <figure class="knife-item">
-      <img src="images/DI90_1.jpg" alt="Ніж «Колючка»: сталь ДІ90, Стаб сувель. Зножнами з шкіри «крейзіхорс»" class="gallery-image">
+      <img src="images/DI90_1.jpg" alt="Ніж «Колючка»: сталь ДІ90, Стаб сувель. Зножнами з шкіри «крейзіхорс»" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Колючка»: сталь ДІ90, Стаб сувель. Зножнами з шкіри «крейзіхорс»</figcaption>
     </figure>
     <!--  12 -->
     <figure class="knife-item">
-      <img src="images/DI90_2.jpg" alt="Ніж «Колючка»: сталь ДІ90, Стаб сувель. Зножнами з шкіри «крейзіхорс»" class="gallery-image">
+      <img src="images/DI90_2.jpg" alt="Ніж «Колючка»: сталь ДІ90, Стаб сувель. Зножнами з шкіри «крейзіхорс»" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Колючка»: сталь ДІ90, Стаб сувель. Зножнами з шкіри «крейзіхорс»</figcaption>
     </figure>
     <!--  13 -->
     <figure class="knife-item">
-      <img src="images/DI90_3.jpg" alt="Ніж «Колючка»: сталь ДІ90, Стаб сувель. Зножнами з шкіри «крейзіхорс»" class="gallery-image">
+      <img src="images/DI90_3.jpg" alt="Ніж «Колючка»: сталь ДІ90, Стаб сувель. Зножнами з шкіри «крейзіхорс»" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Колючка»: сталь ДІ90, Стаб сувель. Зножнами з шкіри «крейзіхорс»</figcaption>
     </figure>
     <!--  14 -->
     <figure class="knife-item">
-      <img src="images/Fultang.jpg" alt="Ніж «Фултанг»: сталь х12мф, на стяжках корбі." class="gallery-image">
+      <img src="images/Fultang.jpg" alt="Ніж «Фултанг»: сталь х12мф, на стяжках корбі." class="gallery-image"loading="lazy">
       <figcaption>Ніж «Фултанг»: сталь х12мф, на стяжках корбі.</figcaption>
     </figure>
    
     <!--  16 -->
       <figure class="knife-item">
-      <img src="images/red_cap_1.jpg" alt="Ніж «Червоненький»: сталь ДИ37, Стабілізований кап." class="gallery-image">
+      <img src="images/red_cap_1.jpg" alt="Ніж «Червоненький»: сталь ДИ37, Стабілізований кап." class="gallery-image"loading="lazy">
       <figcaption>Ніж «Червоненький»: сталь ДИ37, Стабілізований кап.</figcaption>
     </figure>
     <!--  17 -->
       <figure class="knife-item">
-      <img src="images/red_cap_2.jpg" alt="Ніж «Червоненький»: сталь ДИ37, Стабілізований кап." class="gallery-image">
+      <img src="images/red_cap_2.jpg" alt="Ніж «Червоненький»: сталь ДИ37, Стабілізований кап." class="gallery-image"loading="lazy">
       <figcaption>Ніж «Червоненький»: сталь ДИ37, Стабілізований кап.</figcaption>
     </figure>
     <!--  18 -->
       <figure class="knife-item"> 
-      <img src="images\Smugastik1.JPG" alt="Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор" class="gallery-image">
+      <img src="images\Smugastik1.JPG" alt="Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор</figcaption>
     </figure>
      <!--  19 -->
       <figure class="knife-item">
-      <img src="images/Smugastik2.JPG" alt="Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор" class="gallery-image">
+      <img src="images/Smugastik2.JPG" alt="Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор</figcaption>
     </figure>
     <!--  20 -->
       <figure class="knife-item">
-      <img src="images/Smugastik3.JPG" alt="Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор" class="gallery-image">
+      <img src="images/Smugastik3.JPG" alt="Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор</figcaption>
     </figure>
     <!--  21 -->
       <figure class="knife-item">
-      <img src="images/tommi_XS_1.JPG" alt="Ніж «Томмі XS»: сталь  Х12мф , дерево бубинго карельська береза та мельхіор" class="gallery-image">
+      <img src="images/tommi_XS_1.JPG" alt="Ніж «Томмі XS»: сталь  Х12мф , дерево бубинго карельська береза та мельхіор" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Томмі XS»: сталь  Х12мф , дерево бубинго карельська береза та мельхіор</figcaption>
     </figure>
      <!--  22 -->
       <figure class="knife-item">
-      <img src="images/tommi_XS_2.JPG" alt="Ніж «Томмі XS»: сталь  Х12мф , дерево бубинго карельська береза та мельхіор" class="gallery-image">
+      <img src="images/tommi_XS_2.JPG" alt="Ніж «Томмі XS»: сталь  Х12мф , дерево бубинго карельська береза та мельхіор" class="gallery-image"loading="lazy">
       <figcaption>Ніж «Томмі XS»: сталь  Х12мф , дерево бубинго карельська береза та мельхіор</figcaption>
     </figure>
      <!--  23 -->
       <figure class="knife-item">
-      <img src="images\U8.jpg" alt="Ніж «-U8-»: сталь У8 , дерево бубинго карельська береза та мельхіор" class="gallery-image">
+      <img src="images\U8.jpg" alt="Ніж «-U8-»: сталь У8 , дерево бубинго карельська береза та мельхіор" class="gallery-image"loading="lazy">
       <figcaption>Ніж «-U8-»: сталь У8 , дерево бубинго карельська береза та мельхіор</figcaption>
     </figure>
 
@@ -135,7 +141,7 @@
   </div>
 
   <!-- Модальне вікно для великого фото -->
-  <div id="modal" class="modal" onclick="closeModal()">
+  <div id="modal" class="modal">
     <span class="close">&times;</span>
     <img class="modal-content" id="modal-img">
   </div>
@@ -158,19 +164,54 @@
   <script>
     const modal = document.getElementById("modal");
     const modalImg = document.getElementById("modal-img");
+    const closeBtn = document.querySelector(".close");
     const images = document.querySelectorAll(".gallery-image");
 
     images.forEach(img => {
       img.onclick = function () {
         modal.style.display = "block";
         modalImg.src = this.src;
+        
+        setTimeout(() => {
+          modal.classList.add("show");
+        }, 10);
       }
     });
 
     function closeModal() {
-      modal.style.display = "none";
+      modal.classList.remove("show");
+      
+      setTimeout(() => {
+        modal.style.display = "none";
+      }, 300);
     }
-  </script>
+
+    // Закриття при кліку на хрестик
+    closeBtn.onclick = function(event) {
+      event.stopPropagation();
+      closeModal();
+    }
+
+    // Закриття при кліку на зображення в модальному вікні
+    modalImg.onclick = function(event) {
+      event.stopPropagation();
+      closeModal();
+    }
+
+    // Закриття модального вікна при кліку на фон
+    modal.onclick = function(event) {
+      if (event.target === modal) {
+        closeModal();
+      }
+    }
+
+    // Закриття при натисканні Escape
+    document.addEventListener('keydown', function(event) {
+      if (event.key === 'Escape' && modal.classList.contains('show')) {
+        closeModal();
+      }
+    });
+</script>
 
 </body>
 </html>
