добавив пару ножів

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
  <!--  5 Малюк -->
 <figure class="knife-item" data-images='["images/DI90_1.jpg", "images/DI90_2.jpg", "images/DI90_3.jpg"]'>
   <div class="image-container">
-    <img src="images/DI90_1.jpg" alt="Ніж «Колючка»" class="gallery-image" loading="lazy">
+    <img src="images/DI90_2.jpg" alt="Ніж «Колючка»" class="gallery-image" loading="lazy">
     <div class="photo-count">3 фото</div>
   </div>
   <figcaption>Ніж «Колючка»: сталь ДІ90, Стаб сувель. Зножнами з шкіри «крейзіхорс»</figcaption>
@@ -91,20 +91,50 @@
 
 <figure class="knife-item" data-images='["images/tommi_XS_1.JPG", "images/tommi_XS_2.JPG"]'>
   <div class="image-container">
-    <img src="images/tommi_XS_1.JPG" alt="Ніж «Томмі XS»" class="gallery-image" loading="lazy">
+    <img src="images/tommi_XS_2.JPG" alt="Ніж «Томмі XS»" class="gallery-image" loading="lazy">
     <div class="photo-count">2 фото</div>
   </div>
   <figcaption>Ніж «Томмі XS»: сталь  Х12мф , дерево бубинго карельська береза та мельхіор.</figcaption>
    <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
 </figure>
 
-     <!--  23 -->
+     <!--  9 -->
       <figure class="knife-item">
       <img src="images/U8.jpg" alt="Ніж «-U8-»: сталь У8 , дерево бубинго карельська береза та мельхіор" class="gallery-image" loading="lazy">
       <figcaption>Ніж «-U8-»: сталь У8 , дерево бубинго карельська береза та мельхіор</figcaption>
        <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
     </figure>
 
+     <!--  10 -->
+    <figure class="knife-item" data-images='["images/BigMama.jpg", "images/BigMama1.jpg"]'>
+  <div class="image-container">
+    <img src="images/BigMama1.jpg" alt="Ніж «BigMama»" class="gallery-image" loading="lazy">
+    <div class="photo-count">2 фото</div>
+  </div>
+  <figcaption>Ніж «BigMama»: сталь  Х12мф , морений дуб .</figcaption>
+   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+  </figure>
+
+    <!--  11 -->
+    <figure class="knife-item" data-images='["images/Mamba.jpg", "images/Mamba1.jpg", "images/Mamba3.jpg", "images/Mamba4.jpg", "images/Mamba5.jpg", "images/Mamba6.jpg"]'>
+  <div class="image-container">
+    <img src="images/Mamba.jpg" alt="Ніж «Mamba»" class="gallery-image" loading="lazy">
+    <div class="photo-count">6 фото</div>
+  </div>
+  <figcaption>Ніж «Mamba»: сталь  Х12мф , микарта .</figcaption>
+   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+  </figure>
+
+  <!--  12 -->
+    <figure class="knife-item" data-images='["images/Obrubok1.jpg", "images/Obrubok2.jpg", "images/Obrubok3.jpg"]'>
+  <div class="image-container">
+    <img src="images/Obrubok3.jpg" alt="Ніж «Obrubok»" class="gallery-image" loading="lazy">
+    <div class="photo-count">3 фото</div>
+  </div>
+  <figcaption>Ніж «Obrubok»: сталь  Х12мф , микарта .</figcaption>
+   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+  </figure>
+     
     
   </div>
   <!-- Модальне вікно для великого фото -->
