Добавив дійсні ссилкі на ютуб . Є ще не всі.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="photo-count">3 фото</div>
   </div>
   <figcaption>Ніж «Малюк»: сталь 95х18, кап дуба</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/0azY-UmJdo0" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
 </figure>
     
  <!--  3 cap_X12mf -->
@@ -45,7 +45,7 @@
     <div class="photo-count">3 фото</div>
   </div>
   <figcaption>Ніж «Каповий»: сталь х12мф, кап клена з латунними радіусними вставками</figcaption>
-   <a href="https://youtube.com/shorts/kYskwzN3m-8?si=PiHTn0bSN5YvhQT-" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/gtjdAZ9Ygog" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
    </figure>
 
     <!--  4 Класика  -->
@@ -55,7 +55,7 @@
     <div class="photo-count">4 фото</div>
   </div>
   <figcaption>Ніж «Класика»: сталь ДІ37, Морений дуб латунь та карельська береза</figcaption>
-   <a href="https://youtube.com/shorts/kYskwzN3m-8?si=PiHTn0bSN5YvhQT-" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/hWZOcWqK55U" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
    </figure>
  <!--  5 DI90 -->
 <figure class="knife-item" data-images='["images/DI90_1.jpg", "images/DI90_2.jpg", "images/DI90_3.jpg"]'>
@@ -64,14 +64,14 @@
     <div class="photo-count">3 фото</div>
   </div>
   <figcaption>Ніж «Колючка»: сталь ДІ90, Стаб сувель. Зножнами з шкіри «крейзіхорс»</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/7u7pnQwWfZM" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
 </figure>
 
     <!--  6 Фултанг-->
     <figure class="knife-item">
       <img src="images/Fultang.jpg" alt="Ніж «Фултанг»: сталь х12мф, на стяжках корбі." class="gallery-image" loading="lazy">
       <figcaption>Ніж «Фултанг»: сталь х12мф, на стяжках корбі.</figcaption>
-       <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+       <a href="https://www.youtube.com/shorts/ezVKHRI_4qc" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
     </figure>
    
     <!--  7 Червоненький -->
@@ -81,7 +81,7 @@
     <div class="photo-count">2 фото</div>
   </div>
   <figcaption>Ніж «Червоненький»: сталь ДИ37, Стабілізований кап.</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/4IkmShnCP54" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
 </figure>
 
     <!--  8 Смугастик -->
@@ -91,7 +91,7 @@
     <div class="photo-count">3 фото</div>
   </div>
   <figcaption>Ніж «Смугастик»: сталь Ламінат р18 в обкладках 40х13, дерево редхарт та мельхіор. </figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/lsmiNfvcGME" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
 </figure>
 <!--  9 Томмі XS -->
 <figure class="knife-item" data-images='["images/tommi_XS_1.JPG", "images/tommi_XS_2.JPG"]'>
@@ -100,7 +100,7 @@
     <div class="photo-count">2 фото</div>
   </div>
   <figcaption>Ніж «Томмі XS»: сталь  Х12мф , дерево бубинго карельська береза та мельхіор.</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/LTEbDMnMqSg" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
 </figure>
 
      <!--  10 U8 -->
@@ -117,7 +117,7 @@
     <div class="photo-count">2 фото</div>
   </div>
   <figcaption>Ніж «BigMama»: сталь  Х12мф , морений дуб .</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/E1uGojCZdXQ" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
   </figure>
 
     <!--  12 Mamba-->
@@ -137,7 +137,7 @@
     <div class="photo-count">3 фото</div>
   </div>
   <figcaption>Ніж «Obrubok»: сталь  Х12мф , микарта .</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://youtu.be/wWSNuqrDlPM?si=RaxJGQo5zeWNv79u" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
   </figure>
 
   <!--  14 Полос -->
@@ -167,14 +167,14 @@
     <div class="photo-count">10 фото</div>
   </div>
   <figcaption>Ніж «Ламінат з міддю »: сталь  ХВ5 в центі через мідь , Айронвуд та мокуме гане.</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/tdGoOkYvo8o" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
   </figure>
 
   <!--  17 -->
       <figure class="knife-item">
       <img src="images/X12_Orich.jpg" alt="Ніж «Горіх»: сталь х12мф , дерево горіх та вставка рога лося" class="gallery-image" loading="lazy">
       <figcaption>Ніж «Горіх»: сталь х12мф , дерево горіх та вставка рога лося</figcaption>
-       <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+       <a href="https://www.youtube.com/shorts/l3Qu_5f1mrA" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
     </figure>
 
     <!--  18 Кухонні-->
@@ -194,9 +194,10 @@
   <div class="image-container">
     <img src="images/2DamaskFlip1.jpg" alt="Ножі Фліпери на підшипниках . рама титан анадований стаб дерево та айронвуд" class="gallery-image" loading="lazy">
     <div class="photo-count">3 фото</div>
-  </div>
-  <figcaption>Ножі Фліпери на підшипниках . рама титан анадований стаб дерево та айронвуд .</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+  </div>  <figcaption>Ножі Фліпери на підшипниках . рама титан анадований стаб дерево та айронвуд .</figcaption>
+   <a href="https://www.youtube.com/shorts/M3ZouA51z8U" target="_blank"><i class="fab fa-youtube"></i> YouTube </a><br>
+   <a href="https://www.youtube.com/shorts/5LMTmNdi3D8" target="_blank"><i class="fab fa-youtube"></i> YouTube </a><br>
+   <a href="https://www.youtube.com/watch?v=N7PljC32O9c" target="_blank"><i class="fab fa-youtube"></i> YouTube </a>
   </figure>
 
   <!--  20 Titan-->
@@ -206,7 +207,7 @@
     <div class="photo-count">3 фото</div>
   </div>
   <figcaption>Ніж «Титан»: сталь  96х18 рама титан на шайбах не фліпер .</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/rbX_jMqnVB8" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
   </figure>
 
   <!--  21 baterflai-->
@@ -223,7 +224,7 @@
       <figure class="knife-item">
       <img src="images/20240110_161645.jpg" alt="Ніж «Складний»: сталь  х12мф , микарта" class="gallery-image" loading="lazy">
       <figcaption>Ножі «Скадний фліпер»: сталь  х12мф , микарта та рама титан анодований. </figcaption>
-       <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+       <a href="https://www.youtube.com/shorts/zgIAZCPD-oA" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
     </figure>  
 
     <!--  21 Мокуме-->
@@ -233,7 +234,7 @@
     <div class="photo-count">6 фото</div>
   </div>
   <figcaption>Ніж «Мокуме»: сталь  N690 рама титан на підшипниках накладки мокуме.</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/c1BIQKtwXc8" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
   </figure>
 
 
