--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="photo-count">3 фото</div>
   </div>
   <figcaption>Ніж «Полос»: сталь  ДИ37 , Мельхіор та морений дуб ножни зі вставкою шкіри ската .</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/_FgQ9T2nydY" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
   </figure>
 
   <!--  15 Томмі_L -->
@@ -157,7 +157,7 @@
     <div class="photo-count">3 фото</div>
   </div>
   <figcaption>Ніж «Томмі_L»: сталь  Х12мф , палисандр мельхіор .</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/Xt7K1A6S7T8" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
   </figure>
 
   <!--  16 HV5_Cuprum-->
