--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div class="photo-count">7 фото</div>
   </div>
   <figcaption>Ножі «Кухонні»: сталь х12 та х12мф , дерево .</figcaption>
-   <a href="https://youtu.be/Bk8gQbAE9zw?si=YqN85QUMA76FsUb4" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+   <a href="https://www.youtube.com/shorts/ZW0bWVoZC1g" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
   </figure>
 
 
